Add C# solution for day 1 - challenge 1
* Add dotnet console program
* Add solution for challenge 1
* Add bin and obj folders to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@ dmypy.json
 .idea/modules.xml
 .idea/vcs.xml
 .idea/inspectionProfiles/profiles_settings.xml
+day1/dotnet-vscode/bin/
+day1/dotnet-vscode/obj/
