--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,32 @@ dmypy.json
 .idea/inspectionProfiles/profiles_settings.xml
 day1/dotnet-vscode/bin/
 day1/dotnet-vscode/obj/
+day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/Day1.deps.json
+day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/Day1.dll
+day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/Day1.exe
+day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/Day1.pdb
+day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/Day1.runtimeconfig.json
+day1/dotnet-vs/Day1/Day1/obj/Day1.csproj.nuget.dgspec.json
+day1/dotnet-vs/Day1/Day1/obj/Day1.csproj.nuget.g.props
+day1/dotnet-vs/Day1/Day1/obj/Day1.csproj.nuget.g.targets
+day1/dotnet-vs/Day1/Day1/obj/project.assets.json
+day1/dotnet-vs/Day1/Day1/obj/project.nuget.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/apphost.exe
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.AssemblyInfo.cs
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.AssemblyInfoInputs.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.assets.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.csproj.AssemblyReference.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.csproj.BuildWithSkipAnalyzers
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.csproj.CoreCompileInputs.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.csproj.FileListAbsolute.txt
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.dll
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.GeneratedMSBuildEditorConfig.editorconfig
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.genruntimeconfig.cache
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.GlobalUsings.g.cs
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/Day1.pdb
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/ref/Day1.dll
+day1/dotnet-vs/Day1/Day1/obj/Debug/net6.0/refint/Day1.dll
+day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/3168560c-d1ea-42f4-b2f0-cc8347add26b.vsidx
+day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/read.lock
+day1/dotnet-vs/Day1/.vs/Day1/v17/.suo
