Add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,8 @@ day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.assets.cache
 day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.csproj.AssemblyReference.cache
 day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.GeneratedMSBuildEditorConfig.editorconfig
 day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.GlobalUsings.g.cs
+.vs/VSWorkspaceState.json
+day1/dotnet-vs/Day1/.vs/Day1/DesignTimeBuild/.dtbcache.v2
+day1/dotnet-vs/Day1/.vs/Day1/v17/.futdcache.v2
+day1/dotnet-vs/Day1/.vs/ProjectEvaluation/day1.projects.v5.1
+day1/dotnet-vs/Day1/.vs/ProjectEvaluation/day1.metadata.v5.1
