--- a/.gitignore
+++ b/.gitignore
@@ -169,16 +169,13 @@ day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/8e9c6272-1c14-433e-8f16-1565c54037
 day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/23e500e6-911c-4e06-9de2-a954f2127168.vsidx
 day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/864b7a0a-155f-474a-8687-ee93616952e6.vsidx
 day1/dotnet-vs/Day1/.vs/Day1/FileContentIndex/ac77e14c-e41e-46c1-b07d-49efc2a861a2.vsidx
-day1/dotnet-vs/Day1/Day1/bin/Debug/net6.0/day1-input.txt
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.AssemblyInfo.cs
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.AssemblyInfoInputs.cache
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.assets.cache
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.csproj.AssemblyReference.cache
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.GeneratedMSBuildEditorConfig.editorconfig
-day1/dotnet-vs/Day1/Day1/obj/Release/net6.0/Day1.GlobalUsings.g.cs
+day1/dotnet-vs/Day1/Day1/bin/
+day1/dotnet-vs/Day1/Day1/obj/
 .vs/VSWorkspaceState.json
 day1/dotnet-vs/Day1/.vs/Day1/DesignTimeBuild/.dtbcache.v2
 day1/dotnet-vs/Day1/.vs/Day1/v17/.futdcache.v2
 day1/dotnet-vs/Day1/.vs/ProjectEvaluation/day1.projects.v5.1
 day1/dotnet-vs/Day1/.vs/ProjectEvaluation/day1.metadata.v5.1
+day6/dotnet-vscode/bin/
+day6/dotnet-vscode/obj/
+
