day 6 added test input

--- a/day6/dotnet/AOC2021.Day6/LanternFishService.Tests/LanternFishService.Tests.csproj
+++ b/day6/dotnet/AOC2021.Day6/LanternFishService.Tests/LanternFishService.Tests.csproj
@@ -25,4 +25,9 @@
     <ProjectReference Include="..\LanternFishService\LanternFishService.csproj" />
   </ItemGroup>
 
+<ItemGroup>
+  <None Include="$(SolutionDir)Inputs\**" 
+        CopyToOutputDirectory="PreserveNewest"
+        LinkBase="Inputs\" />
+</ItemGroup>
 </Project>
