day6 - add unit tests

--- a/day6/dotnet/AOC2021.Day6/LanternFishService.Tests/LanternFishService.Tests.csproj
+++ b/day6/dotnet/AOC2021.Day6/LanternFishService.Tests/LanternFishService.Tests.csproj
@@ -25,9 +25,7 @@
     <ProjectReference Include="..\LanternFishService\LanternFishService.csproj" />
   </ItemGroup>
 
-<ItemGroup>
-  <None Include="$(SolutionDir)Inputs\**" 
-        CopyToOutputDirectory="PreserveNewest"
-        LinkBase="Inputs\" />
-</ItemGroup>
+  <ItemGroup>
+    <None Include="$(SolutionDir)Inputs\**" CopyToOutputDirectory="PreserveNewest" LinkBase="Inputs\" />
+  </ItemGroup>
 </Project>
