Add day2 dotnet solution

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,61 @@ day6/dotnet/AOC2021.Day6/LanternFishService/bin/
 day6/dotnet/AOC2021.Day6/LanternFishService/obj/
 day6/dotnet/AOC2021.Day6/LanternFishService.Tests/bin/
 day6/dotnet/AOC2021.Day6/LanternFishService.Tests/obj/
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/.vs/ProjectEvaluation/aoc2021.day6.projects.v5.1
+day6/dotnet/AOC2021.Day6/.vs/ProjectEvaluation/aoc2021.day6.metadata.v5.1
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/TestStore/0/000.testlog
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.suo
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.futdcache.v2
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/a6c5aea2-51b8-4c6a-8984-790db5d91817.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/2c223071-ec35-4339-9d8a-e9a4335f06cb.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/DesignTimeBuild/.dtbcache.v2
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.suo
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/2c223071-ec35-4339-9d8a-e9a4335f06cb.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/DesignTimeBuild/.dtbcache.v2
+day2/dotnet/Day2/Day2/obj/Day2.csproj.nuget.dgspec.json
+day2/dotnet/Day2/Day2/obj/Day2.csproj.nuget.g.props
+day2/dotnet/Day2/Day2/obj/Day2.csproj.nuget.g.targets
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.AssemblyInfo.cs
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.AssemblyInfoInputs.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.assets.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.csproj.AssemblyReference.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.GeneratedMSBuildEditorConfig.editorconfig
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.GlobalUsings.g.cs
+day2/dotnet/Day2/Day2/obj/project.assets.json
+day2/dotnet/Day2/Day2/obj/project.nuget.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.suo
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/2c223071-ec35-4339-9d8a-e9a4335f06cb.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/DesignTimeBuild/.dtbcache.v2
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.suo
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/2c223071-ec35-4339-9d8a-e9a4335f06cb.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/DesignTimeBuild/.dtbcache.v2
+day2/dotnet/Day2/.vs/Day2/DesignTimeBuild/.dtbcache.v2
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/DesignTimeBuild/.dtbcache.v2
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/FileContentIndex/2c223071-ec35-4339-9d8a-e9a4335f06cb.vsidx
+day6/dotnet/AOC2021.Day6/.vs/AOC2021.Day6/v17/.suo
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
+day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
