Initial day 2 dot net program and class library

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,17 @@ day6/dotnet/AOC2021.Day6/LanternFishCLI/bin/Debug/net6.0/LanternFishCLI.pdb
 day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.csproj.AssemblyReference.cache
 day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.dll
 day6/dotnet/AOC2021.Day6/LanternFishCLI/obj/Debug/net6.0/LanternFishCLI.pdb
+day2/dotnet/Day2/.vs/Day2/v17/.suo
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.deps.json
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.dll
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.exe
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.pdb
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.runtimeconfig.json
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/apphost.exe
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.csproj.CoreCompileInputs.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.csproj.FileListAbsolute.txt
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.dll
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.genruntimeconfig.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.pdb
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/ref/Day2.dll
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/refint/Day2.dll
