day2 dotnet solution implementation

--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,167 @@ day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.genruntimeconfig.cache
 day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.pdb
 day2/dotnet/Day2/Day2/obj/Debug/net6.0/ref/Day2.dll
 day2/dotnet/Day2/Day2/obj/Debug/net6.0/refint/Day2.dll
+day2/dotnet/Day2/Day2.PositionCalculator/bin/Debug/net6.0/Day2.PositionCalculator.deps.json
+day2/dotnet/Day2/Day2.PositionCalculator/bin/Debug/net6.0/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2.PositionCalculator/bin/Debug/net6.0/Day2.PositionCalculator.pdb
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Day2.PositionCalculator.csproj.nuget.dgspec.json
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Day2.PositionCalculator.csproj.nuget.g.props
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Day2.PositionCalculator.csproj.nuget.g.targets
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.AssemblyInfo.cs
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.AssemblyInfoInputs.cache
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.assets.cache
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.csproj.AssemblyReference.cache
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.csproj.BuildWithSkipAnalyzers
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.csproj.CoreCompileInputs.cache
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.csproj.FileListAbsolute.txt
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.GeneratedMSBuildEditorConfig.editorconfig
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.GlobalUsings.g.cs
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/Day2.PositionCalculator.pdb
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/ref/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2.PositionCalculator/obj/Debug/net6.0/refint/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2.PositionCalculator/obj/project.assets.json
+day2/dotnet/Day2/Day2.PositionCalculator/obj/project.nuget.cache
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.CLI.deps.json
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.CLI.dll
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.CLI.exe
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.CLI.pdb
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.CLI.runtimeconfig.json
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Day2.PositionCalculator.pdb
+day2/dotnet/Day2/Day2/bin/Debug/net6.0/Inputs/day2-input.txt
+day2/dotnet/Day2/Day2/obj/Day2.CLI.csproj.nuget.dgspec.json
+day2/dotnet/Day2/Day2/obj/Day2.CLI.csproj.nuget.g.props
+day2/dotnet/Day2/Day2/obj/Day2.CLI.csproj.nuget.g.targets
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.AssemblyInfo.cs
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.AssemblyInfoInputs.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.assets.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.csproj.AssemblyReference.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.csproj.BuildWithSkipAnalyzers
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.csproj.CopyComplete
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.csproj.CoreCompileInputs.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.csproj.FileListAbsolute.txt
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.dll
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.GeneratedMSBuildEditorConfig.editorconfig
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.genruntimeconfig.cache
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.GlobalUsings.g.cs
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/Day2.CLI.pdb
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/ref/Day2.CLI.dll
+day2/dotnet/Day2/Day2/obj/Debug/net6.0/refint/Day2.CLI.dll
+day2/dotnet/Day2/.vs/Day2/v17/TestStore/0/000.testlog
+day2/dotnet/Day2/.vs/ProjectEvaluation/day2.metadata.v5.1
+day2/dotnet/Day2/.vs/ProjectEvaluation/day2.projects.v5.1
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/CoverletSourceRootsMapping
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/cs/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/cs/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/cs/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/cs/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/cs/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.pdb
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.Tests.deps.json
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.Tests.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.Tests.pdb
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Day2.PositionCalculator.Tests.runtimeconfig.json
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/de/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/de/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/de/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/de/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/de/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/es/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/es/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/es/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/es/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/es/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/fr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/fr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/fr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/fr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/fr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Inputs/day2-input.txt
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/it/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/it/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/it/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/it/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/it/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ja/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ja/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ja/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ja/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ja/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ko/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ko/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ko/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ko/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.execution.dotnet.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.runner.reporters.netcoreapp10.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.runner.utility.netcoreapp10.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.runner.visualstudio.dotnetcore.testadapter.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hans/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hans/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hans/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hans/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hant/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hant/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hant/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/zh-Hant/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ko/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.TestPlatform.CommunicationUtilities.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.TestPlatform.CoreUtilities.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.TestPlatform.CrossPlatEngine.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.TestPlatform.PlatformAbstractions.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.TestPlatform.Utilities.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.VisualStudio.CodeCoverage.Shim.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.VisualStudio.TestPlatform.Common.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Microsoft.VisualStudio.TestPlatform.ObjectModel.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/Newtonsoft.Json.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/NuGet.Frameworks.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pl/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pl/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pl/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pl/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pl/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pt-BR/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pt-BR/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pt-BR/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pt-BR/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/pt-BR/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ru/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ru/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ru/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ru/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/ru/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/testhost.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/testhost.exe
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/tr/Microsoft.TestPlatform.CommunicationUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/tr/Microsoft.TestPlatform.CoreUtilities.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/tr/Microsoft.TestPlatform.CrossPlatEngine.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/tr/Microsoft.VisualStudio.TestPlatform.Common.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/tr/Microsoft.VisualStudio.TestPlatform.ObjectModel.resources.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.abstractions.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.assert.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/bin/Debug/net6.0/xunit.core.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/project.nuget.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/project.assets.json
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/refint/Day2.PositionCalculator.Tests.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/ref/Day2.PositionCalculator.Tests.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.pdb
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.GlobalUsings.g.cs
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.genruntimeconfig.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.GeneratedMSBuildEditorConfig.editorconfig
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.dll
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.csproj.FileListAbsolute.txt
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.csproj.CoreCompileInputs.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.csproj.CopyComplete
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.csproj.BuildWithSkipAnalyzers
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.csproj.AssemblyReference.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.assets.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.AssemblyInfoInputs.cache
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/Day2.PositionCalculator.Tests.AssemblyInfo.cs
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Day2.PositionCalculator.Tests.csproj.nuget.g.targets
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Day2.PositionCalculator.Tests.csproj.nuget.g.props
+day2/dotnet/Day2/Day2.PositionCalculator.Tests/obj/Day2.PositionCalculator.Tests.csproj.nuget.dgspec.json
